--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,17 +1,35 @@
-name: Backend CI/CD
+name: Finaltica Backend CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+    paths:
+      - 'backend/**' 
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
+    paths:
+      - 'backend/**'
 
 jobs:
-  backend-tests:
+  build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: 'maven'
+
+    - name: Build with Maven
+      working-directory: ./backend
+      run: mvn clean package -DskipTests
+
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: finaltica-backend-jar
+        path: backend/target/*.jar
