--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=finaltica
 spring.config.import=optional:file:./.env[.properties]
 
+# Database Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -8,3 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:mySecretKeyForJWTTokenGenerationMustBeAtLeast256BitsLong}
+jwt.expiration=${JWT_EXPIRATION:3600000}
+
+# Server Configuration
+server.port=${SERVER_PORT}
