--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,10 +9,24 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:mySecretKeyForJWTTokenGenerationMustBeAtLeast256BitsLong}
 jwt.expiration=${JWT_EXPIRATION:3600000}
+
+# AWS Configuration
+aws.access_key_id=${AWS_ACCESS_KEY_ID}
+aws.secret_access_key=${AWS_SECRET_ACCESS_KEY}
+aws.s3.bucket_name=${AWS_S3_BUCKET_NAME}
+aws.region=${AWS_REGION:us-east-1}
 
 # Server Configuration
 server.port=${SERVER_PORT}
