--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -102,6 +102,20 @@
 	    <version>0.12.5</version>
 	    <scope>runtime</scope>
 	</dependency>
+	<!-- AWS S3 SDK -->
+	<dependency>
+	    <groupId>software.amazon.awssdk</groupId>
+	    <artifactId>s3</artifactId>
+	    <version>2.20.26</version>
+	</dependency>
+	
+	<!-- PDF Generation -->
+	<dependency>
+	    <groupId>com.itextpdf</groupId>
+	    <artifactId>itext7-core</artifactId>
+	    <version>8.0.2</version>
+	    <type>pom</type>
+	</dependency>
 </dependencies>
 	
 	
